--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.outer-layout{
+  margin: 0 auto;
+  text-align: center;
+}
+
+.main-menu ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+  background: rebeccapurple;
+  text-align: center;
+}
+.main-menu ul li a{
+  color: wheat;
+  text-decoration: none;
+}
