--- a/src/Components/self-learn/CourseGoal/CourseInput/CourseInput.css
+++ b/src/Components/self-learn/CourseGoal/CourseInput/CourseInput.css
@@ -22,3 +22,11 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid{
+  color: red;
+}
+.form-control.invalid-back{
+  background-color: rgb(234, 72, 32);
+  color: red;
+}
